feat(ops): add production env template and startup preflight script

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-# PostgreSQL 连接字符串（默认存储驱动为 postgres）
-DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/tri_journal
+# 运行环境（生产请设置为 production）
+NODE_ENV=development
 
-# 可选：仅用于本地调试/测试切回内存
-# STORAGE_DRIVER=memory
+# 存储驱动：postgres | memory
+STORAGE_DRIVER=postgres
+
+# PostgreSQL 连接字符串（STORAGE_DRIVER=postgres 时必填）
+DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/tri_journal
 
 # 可选：服务端口
 # PORT=3000
