feat(ops): add runtime startup preflight checks

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # 运行环境（生产请设置为 production）
 NODE_ENV=development
 
+# 可选：是否在服务启动时执行 runtime preflight（1 开启）
+# ENABLE_RUNTIME_PREFLIGHT=1
+
 # 存储驱动：postgres | memory
 STORAGE_DRIVER=postgres
 
@@ -9,3 +12,7 @@ DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/tri_journal
 
 # 可选：服务端口
 # PORT=3000
+
+# 可选：runtime preflight 豁免（仅建议临时使用）
+# ALLOW_NON_PROD=1
+# ALLOW_MEMORY_IN_PRODUCTION=1
