--- a/.env.production.example
+++ b/.env.production.example
@@ -1,5 +1,6 @@
 # 生产环境变量模板（请复制为 .env 并填写真实值）
 NODE_ENV=production
+ENABLE_RUNTIME_PREFLIGHT=1
 STORAGE_DRIVER=postgres
 
 # 请替换为你的生产数据库连接字符串
@@ -8,3 +9,7 @@ DATABASE_URL=postgres://tri_user:replace_me@db.example.com:5432/tri_journal
 
 # 可选：服务端口（默认 3000）
 PORT=3000
+
+# 可选：runtime preflight 豁免（仅紧急临时使用）
+# ALLOW_NON_PROD=1
+# ALLOW_MEMORY_IN_PRODUCTION=1
